--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
   <body>
     <link rel="stylesheet" href="/css/Notion.css" />
     <div id="app"></div>
-    <script src="/public/main.js" type="module"></script>
+    <script src="/main.js" type="module"></script>
   </body>
 </html>
